// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A <StaticRouter> knows how to serialize location objects 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> knows how to serialize location objects 2`] = `
Object {
  "action": "REPLACE",
  "location": Object {
    "hash": "",
    "pathname": "/somewhere-else",
    "search": "",
  },
  "url": "/somewhere-else",
}
`;

exports[`A <StaticRouter> reports push redirects on the context object 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> reports push redirects on the context object 2`] = `
Object {
  "action": "PUSH",
  "location": Object {
    "hash": "",
    "pathname": "/somewhere-else",
    "search": "",
    "state": undefined,
  },
  "url": "/somewhere-else",
}
`;

exports[`A <StaticRouter> reports redirects on the context object 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> reports redirects on the context object 2`] = `
Object {
  "action": "REPLACE",
  "location": Object {
    "hash": "",
    "pathname": "/somewhere-else",
    "search": "",
    "state": undefined,
  },
  "url": "/somewhere-else",
}
`;

exports[`A <StaticRouter> with a basename adds the basename to push redirect URLs 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> with a basename adds the basename to push redirect URLs 2`] = `
Object {
  "action": "PUSH",
  "location": Object {
    "hash": "",
    "pathname": "/the-base/somewhere-else",
    "search": "",
    "state": undefined,
  },
  "url": "/the-base/somewhere-else",
}
`;

exports[`A <StaticRouter> with a basename adds the basename to redirect URLs 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> with a basename adds the basename to redirect URLs 2`] = `
Object {
  "action": "REPLACE",
  "location": Object {
    "hash": "",
    "pathname": "/the-base/somewhere-else",
    "search": "",
    "state": undefined,
  },
  "url": "/the-base/somewhere-else",
}
`;

exports[`A <StaticRouter> with a basename strips the basename from location pathnames 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> with a string location prop parses the location into an object 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> with a string location prop with a URL-encoded pathname decodes the pathname 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> with an object location prop adds missing properties 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> with an object location prop with a URL-encoded pathname decodes the pathname 1`] = `<DocumentFragment />`;

exports[`A <StaticRouter> with no basename createHref does not append extra leading slash 1`] = `
<DocumentFragment>
  <a
    href="/test-path-please-ignore"
  />
</DocumentFragment>
`;
